syntax = "proto3";

package ru.krayseer.storageproto;

option java_multiple_files = true;
option java_package = "ru.krayseer.storageproto.proto";
option java_outer_classname = "FileUploadProto";

service FileStorageService {

  rpc UploadFile(stream FileChunk) returns (UploadStatus);

}

message FileChunk {
  bytes content = 1;
  string format = 2;
}

message UploadStatus {
  bool success = 1;
  string fileId = 2;
}